@@ -1,55 +1,0 @@
-swagger: "2.0"
-info:
-  title: Template for healthCheck
-  version: "1.0"
-  description: healthCheck allows to retrieve the status of the API.
-tags:
-  - name: Monitoring
-paths:
-  /health:
-    get:
-      tags:
-        - Monitoring
-      summary: Check health of the service
-      description: This resource is only available to supervision users
-      operationId: checkHealth
-      externalDocs:
-        url: https://www.gcloud.belgium.be/rest/#health
-      produces:
-        - application/json
-      security: []
-      responses:
-        "200":
-          description: The service is UP
-          schema:
-            $ref: "#/definitions/HealthStatus"
-          examples:
-            application/json:
-              {
-                "status": "UP"
-              }
-        "500":
-          description: The service cannot generate a health response.
-          schema:
-            $ref: "./../schemas/problem/v1/problem-v1.yaml#/definitions/Problem"
-        "503":
-          description: The service is down or outOfService
-          schema:
-            $ref: "#/definitions/HealthStatus"
-          examples: {
-            "application/json":
-              {
-                "status": "DOWN"
-              }
-          }
-
-definitions:
-  HealthStatus:
-    description: Response message for the API health
-    type: object
-    required:
-      - status
-    properties:
-      status:
-        description: Level indicating the health status of the service, e.g. UP # is functioning as expected, DOWN # is suffering unexpected failures, degraded # is partly unavailable but service can be continued with reduced functionality
-        type: string
